--- a/index.html
+++ b/index.html
@@ -2,17 +2,12 @@
 
 <html>
 	<head>
-		<title>CountDown Timer test</title>
+		<title>Document</title>
 		<link rel="stylesheet" href="./assets/css/style.css">
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
 	</head>
 	<body>
-		<div class="countDown" id="countDown">
-			125 Days 8 Hr 5 Mins 20 Sec
-		</div>
+		<div class="spread" id="spread">Spread !!!</div>
 		
 		<script src="./assets/js/app.js"></script>
 	</body>
-</html>
+<html>
